# autoseg

./: README.md
autoseg/: CMakeLists.txt
autoseg/waxholm/: CMakeLists.txt  waxholm.py
autoseg/waxholm/Resources/Atlas/: WAXHOLM_SPACE_ATLAS_OF_THE_SPRAGUE_DAWLEY_RAT_BRAIN_V4.label.nii  WAXHOLM_SPACE_OF_THE_SPRAGUE_DAWLEY_V1_01.nii
autoseg/waxholm/Resources/UI/: waxholm.ui
